# govdash

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENCE  pyproject.toml  requirements.txt  setup.cfg
govdash/geo/: data.py  exceptions.py  geolocation.py  typings.py
govdash/style/: colour.py
govdash/style/colour/: core.py  themes.py
tests/: test_govdash.py
